create tests and refactoring userAccount